--- a/app/index.html
+++ b/app/index.html
@@ -4,10 +4,97 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Go Surf</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;500;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
+
+  <header class="header">
+    <div class="header__aside">
+      <div class="header__aside-title">
+        go
+        surf
+      </div>
+    </div>
+    <div class="header__slider">
+      <div class="header__slider-item slider-item">
+        <div class="slider-item__info">
+          <div class="slider-item__info-suptitle suptitle-left">Surf</div>
+          <div class="slider-item__info-title">North Shore</div>
+          <div class="slider-item__info-suptext suptitle-left">Condition</div>
+          <div class="slider-item__info-text">Radical</div>
+          <a href="#" class="slider-item__info-link">
+            <img src="img/arrow-right.svg" alt="move to right">
+          </a>
+        </div>
+      </div>
+
+      <div class="header__slider-item slider-item">
+        <div class="slider-item__info">
+          <div class="slider-item__info-suptitle suptitle-left">Surf</div>
+          <div class="slider-item__info-title">South Shore</div>
+          <div class="slider-item__info-suptext suptitle-left">Condition</div>
+          <div class="slider-item__info-text">Radical</div>
+          <a href="#" class="slider-item__info-link">
+            <img src="img/arrow-right.svg" alt="move to right">
+          </a>
+        </div>
+      </div>
+
+      <div class="header__slider-item slider-item">
+        <div class="slider-item__info">
+          <div class="slider-item__info-suptitle suptitle-left">Surf</div>
+          <div class="slider-item__info-title">West Shore</div>
+          <div class="slider-item__info-suptext suptitle-left">Condition</div>
+          <div class="slider-item__info-text">Radical</div>
+          <a href="#" class="slider-item__info-link">
+            <img src="img/arrow-right.svg" alt="move to right">
+          </a>
+        </div>
+      </div>
+
+      <div class="header__slider-item slider-item">
+        <div class="slider-item__info">
+          <div class="slider-item__info-suptitle suptitle-left">Surf</div>
+          <div class="slider-item__info-title">East Shore</div>
+          <div class="slider-item__info-suptext suptitle-left">Condition</div>
+          <div class="slider-item__info-text">Radical</div>
+          <a href="#" class="slider-item__info-link">
+            <img src="img/arrow-right.svg" alt="move to right">
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="slider-dots">
+      <div class="slider-dots__item">
+        <div class="dots-box">
+          <div class="dots-box__number">01</div>
+          <div class="dots-box__name">North Shore</div>
+        </div>
+      </div>
+      <div class="slider-dots__item">
+        <div class="dots-box">
+          <div class="dots-box__number">02</div>
+          <div class="dots-box__name">South Shore</div>
+        </div>
+      </div>
+      <div class="slider-dots__item">
+        <div class="dots-box">
+          <div class="dots-box__number">03</div>
+          <div class="dots-box__name">West Shore</div>
+        </div>
+      </div>
+      <div class="slider-dots__item">
+        <div class="dots-box">
+          <div class="dots-box__number">04</div>
+          <div class="dots-box__name">East Shore</div>
+        </div>
+      </div>
+    </div>
+  </header>
   
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
