--- a/app/index.html
+++ b/app/index.html
@@ -13,10 +13,49 @@
 <body>
 
   <header class="header">
+    <div class="header__title">
+      go
+      surf
+    </div>
     <div class="header__aside">
-      <div class="header__aside-title">
-        go
-        surf
+      <div class="logo">
+        <a href="#">
+          <img src="img/logo.svg" alt="Logo">
+        </a>
+      </div>
+      <nav class="menu">
+        <ul class="menu__list">
+          <li>
+            <a href="#">
+            <img src="img/nav-ico-1.svg" alt="Surf"><span>Surf</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+            <img src="img/nav-ico-2.svg" alt="Travel"><span>Travel</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+            <img src="img/nav-ico-3.svg" alt="Sleep"><span>Sleep</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+            <img src="img/nav-ico-4.svg" alt="Shop"><span>Shop</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <div class="header__search">
+        <img src="img/search.svg" alt="search">
+      </div>
+      <div class="header__date">
+        20
+        <span>07 | 2020</span>
+      </div>
+      <div class="header__location">
+        California
       </div>
     </div>
     <div class="header__slider">
