--- a/app/index.html
+++ b/app/index.html
@@ -154,7 +154,26 @@
       </a>
     </div>
   </header>
+
+  <!--------------------------------------- 2 page start -------------------------------------------->
   
+  <section class="surf">
+      <div class="title">
+        <span>
+          surf
+          <h3>surf</h3>
+        </span>
+      </div>
+  </section>
+
+
+
+
+
+
+
+
+
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/libs.min.js"></script>
